complete Front-End/Client-Side code to support the REST API

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
     <h1>Todo List!!!</h1>
+
+    <input id="newTask" type="text" placeholder="New Task">
+    <button class="js-btn-submit-task">Add Task</button>
+
+    <div class="js-tasks-container"></div>
 </body>
 </html>
